src/objects/Agile_Task_Hours_History__c.object
<CustomObject>
    <fields>
        <fullName>Agile_Task__c</fullName>
        <label>Agile Task</label>
        <referenceTo>Agile_Task__c</referenceTo>
        <relationshipLabel>Agile Task Hours History</relationshipLabel>
        <relationshipName>Agile_Task_Hours_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Change Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_in_Value__c</fullName>
        <label>Change in Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Agile Task Hours History</label>
    <nameField>
        <displayFormat>ATHIST{0000}</displayFormat>
        <label>Agile Task Hours History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agile Task Hours History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>